chore: remove obsolete configuration from OpenJDK BCFIPS tests (#1158)
Signed-off-by: Mauren Berti <mauren.berti@chainguard.dev>